<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/productPrev_1"
                    tools:src="@tools:sample/avatars"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/dishes_product_image_desc"
                    android:src="@drawable/avatar_1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/dishies_product_field_steak_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/steak_200g" />

                    <TextView
                        android:id="@+id/dishies_product_field_vanille_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fleur_de_vanille" />

                    <TextView
                        android:id="@+id/dishies_product_field_unknown_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/je_sais_plus_quoi_crire" />

                    <TextView
                        android:id="@+id/dishies_product_field_unknown2_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lorem_ipsum" />

                    <Button
                        android:id="@+id/button_add_cart_1"
                        app:backgroundTint="#4CAF50"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/button_add_to_cart" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>